--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "sqlalchemy[asyncio]>=2.0.36",
     "humanize>=4.11.0",
     "slowapi>=0.1.9",
+    "fastapi-csrf-protect>=1.0.7",
 ]
 
 [project.optional-dependencies]
